# learn-kuch-bhi-back

./: .env.example  .gitignore  README.md  alembic.ini  backup.sh  config.json  docker-compose.yml  main.py  manim-plugins.json  pyproject.toml  quick_test.py  test.md
app/apis/: deps.py
app/apis/auth/: main.py
app/apis/flashcards/: main.py  schemas.py
app/apis/quiz/: main.py  schemas.py  ws.py
app/apis/user_profile/: main.py  schemas.py
app/apis/video_generator/: main.py  schemas.py
app/core/: config.py  db_services.py  jwt_strategy.py  jwt_utils.py  logging.py  task_queue.py  video_manager.py
app/core/db/: __init__.py  base.py
app/core/db/migrations/: env.py
app/core/db/migrations/versions/: 0d479b277f53_simplify_flashcards_schema_inline_.py  437ce9e7b3f7_adds_user_profiles.py  52533e1e5b14_unique_prevent_duplicate_subtopic_sets_.py  572a1d1ba891_add_video_generation_and_update_.py  a120cfe310e4_init.py  b5d23ace9aec_streamline_flashcards_schema.py  db68da1be8f5_init_users.py  f45ea73b3cae_add_topics_subtopics_tables_and_link_.py
app/core/db/schemas/: __init__.py  auth.py  flashcards.py  quiz.py  user_profile.py  videos.py
app/modules/auth/: __init__.py  users.py
app/modules/chat/models/: chat.py
app/modules/flashcards/: __init__.py  cli.py  generator.py  main.py
app/modules/flashcards/models/: __init__.py  flashcards.py  outline.py
app/modules/quiz/: generator.py  models.py  state.py
app/modules/video_generator/: README.md  cli.py  main.py  pipeline.py
app/modules/video_generator/agents/: __init__.py  code_generator.py  prompt_upgrader.py
app/modules/video_generator/models/: manim.py
app/modules/video_generator/templates/: manim_template.py
app/modules/video_generator/tools/: __init__.py  context7_api.py
app/modules/video_generator/utils/: paths.py
deploy/nginx/: kuchbhi-quiz-ws.conf  kuchbhi.conf
docs/: apis.md  quiz-api.md  sse.md
scripts/: inspect_flashcards.py
