[project]
name = "learn-kuch-bhi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.116.1",
    "google-genai>=1.33.0",
    "manim>=0.19.0",
    "moviepy>=2.2.1",
    "pydantic>=2.11.7",
    "pydantic-ai>=1.0.1",
    "sarvamai>=0.1.19",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
# Run as: `uv run video-gen generate ...`
video-gen = "app.modules.video_generator.cli:main"
flashcards-gen = "app.modules.flashcards.cli:main"

[tool.uv.workspace]
members = [
    "generated_scenes/4aace65c-d1fb-4527-9b18-70385e365f7b",
    "generated_scenes/72e04628-d254-4686-827b-34292418e6c7",
    "generated_scenes/debug-lint-cli",
    "generated_scenes/demo-run-1757391625",
    "generated_scenes/demo-run-1757391766",
    "generated_scenes/demo-run-1757391940",
    "generated_scenes/d7290efc-b496-428d-9f94-05482ab12d29",
    "generated_scenes/post-lint-fix-1757392295",
    "generated_scenes/f88a2c75-805f-43b0-be3a-5c452981eb23",
]
