[project]
name = "learn-kuch-bhi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.116.1",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "fastapi-users-db-sqlalchemy>=6.0.0",
    "google-genai>=1.33.0",
    "manim>=0.19.0",
    "moviepy>=2.2.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.6.1",
    "pydantic-ai>=1.0.1",
    "sarvamai>=0.1.19",
    "sqlalchemy>=2.0.43",
    "asyncpg>=0.30.0",
    "uvicorn>=0.35.0",
    "pyjwt>=2.8.0",
    "jwcrypto>=1.5.6",
    "python-dotenv>=1.0.0",
    "convex>=0.7.0",
]

[project.scripts]
# Run as: `uv run video-gen generate ...`
video-gen = "app.modules.video_generator.cli:main"
flashcards-gen = "app.modules.flashcards.cli:main"

[tool.uv.workspace]
members = [
    "generated_scenes/4aace65c-d1fb-4527-9b18-70385e365f7b",
    "generated_scenes/72e04628-d254-4686-827b-34292418e6c7",
    "generated_scenes/debug-lint-cli",
    "generated_scenes/demo-run-1757391625",
    "generated_scenes/demo-run-1757391766",
    "generated_scenes/demo-run-1757391940",
    "generated_scenes/d7290efc-b496-428d-9f94-05482ab12d29",
    "generated_scenes/post-lint-fix-1757392295",
    "generated_scenes/f88a2c75-805f-43b0-be3a-5c452981eb23",
    "generated_scenes/9180d5a0-d4a4-410b-81b1-7cd5f3a34034",
    "generated_scenes/0101d3f7-0e22-41fc-834b-23ace993e1af",
    "generated_scenes/828315eb-4325-4ae0-9bdc-11e3470fb8ce",
    "generated_scenes/245febc2-c146-485b-bef1-fd939ee6212a",
    "generated_scenes/d2573d31-0b18-45a3-a947-1863a78a0db7",
    "generated_scenes/81ff6e9e-a62c-4c67-80cf-59846de6643f",
    "generated_scenes/c9fda5df-35ba-4a8d-b122-35bf895940d0",
    "generated_scenes/9329095f-11b7-444e-a976-7660988c363a",
    "generated_scenes/fe30f626-1ae1-4bc4-a6cb-2e672a49d663",
    "generated_scenes/7ecd7525-cb52-43d4-853b-3e7106097910",
    "generated_scenes/9f29ed4e-82c8-4c8b-9ae7-129fe9982802",
    "generated_scenes/2d909b2b-4671-4067-892d-69e6531b4892",
    "generated_scenes/a1021200-6c1e-46c5-add0-b8c6fe002438",
    "generated_scenes/dd1798c3-4f09-4a1e-ba27-b32613d18f3f",
]
